--- a/app/src/main/res/layout/fragment_content_compass.xml
+++ b/app/src/main/res/layout/fragment_content_compass.xml
@@ -60,7 +60,7 @@
         android:layout_marginBottom="@dimen/margin_bottom_text_location_name"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="My Location"
+        android:text="@string/compass_my_location"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_title_city_h6"
         app:layout_constraintBottom_toTopOf="@+id/tv_longitude"
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_end_latitude"
-        android:text="32.05"
+        android:text="@string/compass_32_05"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_longitude_and_latitude_h4"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_longitude"
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_bottom_text_lat_long"
         android:layout_marginStart="@dimen/margin_start_longitude"
-        android:text="21.03"
+        android:text="@string/compass_21_03"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_longitude_and_latitude_h4"
         app:layout_constraintBottom_toTopOf="@+id/ads_banner_home"
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="DN"
+        android:text="@string/compass_direction_dn"
         android:textColor="@color/color_text_compass"
         android:textSize="@dimen/text_title_city_h6"
         app:layout_constraintBottom_toTopOf="@+id/iv_compass"
@@ -125,6 +125,20 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_star_gray" />
+
+    <ImageButton
+        android:id="@+id/iv_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_bottom_image_star_warning"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/background_click_button"
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/iv_warning"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_compass"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:srcCompat="@drawable/ic_location_address" />
 
     <ImageButton
         android:id="@+id/iv_warning"
