--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -28,7 +28,8 @@
             android:padding="5dp"
 
             android:scaleType="centerCrop"
-            android:src="@drawable/iv_back" />
+            android:src="@drawable/iv_back"
+            tools:ignore="RtlHardcoded" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,7 +45,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
-                android:src="@drawable/location" />
+                android:src="@drawable/location"
+                tools:ignore="RtlHardcoded" />
 
             <EditText
                 android:id="@+id/edt_search_map"
@@ -53,8 +55,9 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
                 android:background="@drawable/bg_tv_search"
-                android:hint="enter your destination"
-                android:textSize="16sp" />
+                android:hint="@string/map_enter_your_destination"
+                android:textSize="16sp"
+                tools:ignore="RtlHardcoded" />
         </LinearLayout>
     </LinearLayout>
 
