--- a/app/src/main/res/layout/calibrate_activity.xml
+++ b/app/src/main/res/layout/calibrate_activity.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_scrollFlags="scroll|enterAlways"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,26 +27,27 @@
                 android:id="@+id/tv_magnetic_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryWhite"
                 android:text="@string/magnetic_title"
+                android:textColor="@color/colorPrimaryWhite"
                 android:textSize="@dimen/text_longitude_and_latitude_h4" />
+
             <TextView
                 android:id="@+id/tv_magnetic_value"
-                android:layout_marginStart="@dimen/margin_layout"
                 android:layout_width="match_parent"
-                android:textColor="@color/colorPrimaryWhite"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_layout"
                 android:text="@string/calibrate_low"
+                android:textColor="@color/colorPrimaryWhite"
                 android:textSize="@dimen/text_longitude_and_latitude_h4" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_decription_warning"
-            android:layout_marginTop="@dimen/margin_layout"
             android:layout_width="match_parent"
-            android:textColor="@color/colorPrimaryWhite"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_layout"
             android:text="@string/text_decription_notifi_warning_1"
+            android:textColor="@color/colorPrimaryWhite"
             android:textSize="@dimen/text_longitude_and_latitude_h4" />
 
         <TextView
@@ -54,15 +55,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_layout"
-            android:textColor="@color/colorPrimaryWhite"
             android:text="@string/text_decription_perform_warning"
+            android:textColor="@color/colorPrimaryWhite"
             android:textSize="@dimen/text_longitude_and_latitude_h4" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:background="@color/colorPrimaryWhite"
-            android:layout_marginTop="@dimen/margin_layout">
+            android:layout_marginTop="@dimen/margin_layout"
+            android:background="@color/colorPrimaryWhite">
 
             <ImageView
                 android:layout_width="match_parent"
