--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_scrollFlags="scroll|enterAlways"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <LinearLayout
         android:id="@+id/ll_all"
@@ -19,56 +18,58 @@
         android:layout_below="@id/toolbar"
         android:layout_margin="@dimen/margin_layout"
         android:orientation="vertical">
-    <LinearLayout
-        android:id="@+id/ll_about_us"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_click"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_about_us"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            app:srcCompat="@drawable/ic_settings_about_us"
-            android:scaleType="center"/>
+        <LinearLayout
+            android:id="@+id/ll_about_us"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_click"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_about_us"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="33dp"
-            android:text="@string/about_us"
-            android:textColor="@color/color_text_compass"
-            android:textSize="16sp"/>
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/iv_about_us"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:scaleType="center"
+                app:srcCompat="@drawable/ic_settings_about_us" />
 
-    <LinearLayout
-        android:id="@+id/ll_rate_us"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_click"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_about_us"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="33dp"
+                android:gravity="center_vertical"
+                android:text="@string/about_us"
+                android:textColor="@color/color_text_compass"
+                android:textSize="16sp" />
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/iv_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            app:srcCompat="@drawable/ic_stars_24dp"
-            android:tint="@color/colorPrimaryWhite"
-            android:scaleType="center"/>
+        <LinearLayout
+            android:id="@+id/ll_rate_us"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_click"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_name_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:gravity="center_vertical"
-            android:text="@string/rate_us"
-            android:layout_marginStart="33dp"
-            android:textColor="@color/color_text_compass"
-            android:textSize="16sp"/>
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/iv_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:scaleType="center"
+                android:tint="@color/colorPrimaryWhite"
+                app:srcCompat="@drawable/ic_stars_24dp" />
+
+            <TextView
+                android:id="@+id/tv_name_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginStart="33dp"
+                android:gravity="center_vertical"
+                android:text="@string/rate_us"
+                android:textColor="@color/color_text_compass"
+                android:textSize="16sp" />
+        </LinearLayout>
+
         <LinearLayout
             android:id="@+id/ll_share"
             android:layout_width="match_parent"
@@ -80,29 +81,29 @@
                 android:id="@+id/iv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                app:srcCompat="@drawable/ic_share"
+                android:scaleType="center"
                 android:tint="@color/colorPrimaryWhite"
-                android:scaleType="center"/>
+                app:srcCompat="@drawable/ic_share" />
 
             <TextView
                 android:id="@+id/tv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
+                android:layout_marginStart="33dp"
                 android:gravity="center_vertical"
                 android:text="@string/share"
-                android:layout_marginStart="33dp"
                 android:textColor="@color/color_text_compass"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
-    <com.google.android.gms.ads.NativeExpressAdView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <com.google.android.gms.ads.NativeExpressAdView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ads_banner_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_all"
         app:adSize="SMART_BANNER"
-        app:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111" />
 
 </RelativeLayout>
